# New-project

./: CONTEXT.md  README.md  generator.py  requirements.txt  ui.py
midi_generator/: __init__.py
midi_generator/cli/: __init__.py  main.py
midi_generator/config/: __init__.py  settings.py
midi_generator/core/: __init__.py  generator.py  random_utils.py  types.py  utils.py
midi_generator/db/: __init__.py  models.py  schema.sql
midi_generator/humanization/: __init__.py  groove_templates.py  timing.py  velocity.py
midi_generator/instruments/: __init__.py  bass.py  chords.py  drums.py  melody.py
midi_generator/midi/: __init__.py  mapping.py  writer.py
midi_generator/theory/: __init__.py  chords.py  progressions.py  scales.py
midi_generator/ui/: __init__.py  qt_app.py
plugin/: CMakeLists.txt  README.md
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: test_end_to_end.py  test_instruments.py  test_theory.py
